# animatediff-webui

./: .gitignore  .pre-commit-config.yaml  .stignore  COPYING  Makefile  README.md  launch.bat  mypy.ini  package.json  pnpm-lock.yaml  progress.py  pyproject.toml  pyproject.win.toml  run_test.bat  server.py  webui.py  workflow_ama.py
config/prompts/: prompt_travel.json
frontend/: .eslintrc.cjs  README.md  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js
frontend/scripts/: genLocaleKey.ts  parseInternalLINK.ts
frontend/src/: App.tsx  app.config.ts  app.vue  client.ts  consts.ts  index.css
frontend/src/components/: MainPlayer.tsx  TopNav.tsx  VCameraControlItem.tsx  VCameraControlItem.vue  VControlnetPanel.tsx  VControlnetPanel.vue  VMainPlayer.tsx  VMainPlayer.vue  VMenubar.tsx  VMenubar.vue  VModalExport.tsx  VModalExport.vue  VPlayer.tsx  VPlayer.vue  VPreviewSelect.tsx  VPreviewSelect.vue  VProgressMini.vue  VProgressStatusBar.vue  VProjectSettingPanel.tsx  VProjectSettingPanel.vue  VPromptInput.tsx  VPromptInput.vue  VPromptPanel.tsx  VPromptPanel.vue  VRightSidebar.tsx  VRightSidebar.vue  VStatusbar.vue  VThemeButton.vue  VTimeline.vue  VTimelineBlock.vue  VTimelineLayout.vue  VTimelineLayoutPopover.tsx  VTimelineLayoutPopover.vue  VTimelineRuler.vue  VTimelineToolbar.vue  (+8 more)
projects/001_JumppPainting/: prompts.json
projects/002_EnjiPainting/: gen_draft.bat  gen_preview.bat  gen_refine.bat  gen_refine_preview.bat  gen_upscale.bat  prompts.json
src/animatediff/: __init__.py  ama.py  app.py  cli.py  consts.py  exceptions.py  generate.py  globals.py  schedulers.py  schema.py  settings.py  stylize.py  webui.py
src/t/: file_explorer.py
templates/001_t2v/: prompts.json
templates/t2v/: prompts.json
tests/: __init__.py
tests/functional/: test_render_video.py
tests/unit/: test_preprocessor.py
tests/utils/: path.py
(+188 files in other folders)
