[project]
name = "animatediff-webui"
version = "0.1.0"
description = ""
authors = [
    { name = "twocucao", email = "twocucao@gmail.com" },
]
dependencies = [
    "colorama>=0.4.6",
    "accelerate>=0.24.1",
    "cmake>=3.27.7",
    "diffusers>=0.23.0",
    "einops>=0.7.0",
    "gdown>=4.7.1",
    "ninja>=1.11.1.1",
    "numpy>=1.26.1",
    "omegaconf>=2.3.0",
    "pillow>=10.0.1",
    "pydantic>=2.4.2",
    "rich>=13.6.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "shellingham>=1.5.4",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "typer>=0.9.0",
    "controlnet-aux>=0.0.7",
    "matplotlib>=3.8.1",
    "ffmpeg-python>=0.2.0",
    "mediapipe>=0.10.7",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "Apache" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
target-version = ['py310']
ignore = ['F841', 'F401', 'E501']
preview = true

[tool.ruff]
line-length = 120
target-version = 'py310'
ignore = ['F841', 'F401', 'E501']

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = ["animatediff"]

[tool.pdm]
[tool.pdm.build]
includes = [
    "src/animatediff",
]

[[tool.pdm.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.4",
    "pytest>=7.4.3",
]

[project.optional-dependencies]
socks = ['PySocks >= 1.5.6, != 1.5.7, < 2']
tests = [
    'ddt >= 1.2.2, < 2',
    'pytest >= 6',
]
[project.scripts]
mycli = "animatediff-webui.__main__:main"

[tool.pdm.scripts]
lint = "flake8"
test = "pytest"
all = { composite = ["lint", "test"] }